fix qrcode color issue in dark mode

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -71,11 +71,6 @@ All other rights are reserved.
         --nav-arrow-icon: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23f8fafc' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
         --nav-burger-icon: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23f8fafc' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='3' y1='12' x2='21' y2='12'%3E%3C/line%3E%3Cline x1='3' y1='6' x2='21' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='18' x2='21' y2='18'%3E%3C/line%3E%3C/svg%3E");
     }
-
-    .qrcode__image {
-        filter: invert(1) opacity(0.9);
-        mix-blend-mode: screen;
-    }
 }
 
 .u-hidden {
@@ -419,6 +414,13 @@ ul {
     text-align: center;
 }
 
+@media (prefers-color-scheme: dark) {
+    .qrcode__image {
+        filter: invert(1) opacity(0.9);
+        mix-blend-mode: screen;
+    }
+}
+
 
 .intro__info {
     text-align: left;
@@ -724,7 +726,6 @@ body.is-overlay-active {
     .qrcode__image {
         height: 60px;
         max-height: none;
-        mix-blend-mode: multiply;
     }
 
     .qrcode__label {
